Reddit tracker improved